Fix layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,7 @@ body {
 }
 
 .grid-canvas {
+  position: absolute;
   margin: 0 auto;
   z-index: 1;
 }
@@ -65,8 +66,6 @@ body {
 
 .units-canvas {
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
   margin: 0 auto;
   z-index: 2;
 }
